# recipe_manager

./: .gitignore  CMakeLists.txt  README.md  c_mainwindow.cpp  c_mainwindow.h  c_mainwindow.ui  config.json  config_postgresql.json  config_test.json  main.cpp  recipe_manager.pro  recipe_manager_fr_FR.ts  recipe_manager_test.pro  setup_database.sql
rsc/: rsc.qrc
ui/: c_componentelemview.cpp  c_componentelemview.h  c_componentelemview.ui  c_componentview.cpp  c_componentview.h  c_componentview.ui  c_equipementsview.cpp  c_equipementsview.h  c_equipementsview.ui  c_image.cpp  c_image.h  c_image.ui  c_milestoneview.cpp  c_milestoneview.h  c_milestoneview.ui  c_notesdialog.cpp  c_notesdialog.h  c_notesdialog.ui  c_noteview.cpp  c_noteview.h  c_noteview.ui  c_processelemview.cpp  c_processelemview.h  c_processelemview.ui  c_processview.cpp  c_processview.h  c_processview.ui  c_recipeview.cpp  c_recipeview.h  c_recipeview.ui  c_step_view.ui  c_stepview.cpp  c_stepview.h  c_stepview.ui  c_widget.cpp  c_widget.h
utils/: c_component.cpp  c_component.h  c_dbmanager.cpp  c_dbmanager.h  c_ingredient.cpp  c_ingredient.h  c_iomanager.cpp  c_iomanager.h  c_milestone.cpp  c_milestone.h  c_note.cpp  c_note.h  c_process.cpp  c_process.h  c_recipe.cpp  c_recipe.h  c_step.cpp  c_step.h  c_test.cpp  c_test.h  utils.cpp  utils.h
